k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-ev1
  labels:
    app.kubernetes.io/name: devops-ev1
    app.kubernetes.io/part-of: evaluacion-parcial-3
    observability: enabled
