k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-ev1-service
  namespace: devops-ev1
  labels:
    app.kubernetes.io/name: devops-ev1
    app.kubernetes.io/component: api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: devops-ev1
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
